Final leak cleanup + some command args to help detect leaks